my first commit

--- a/config/configs.json
+++ b/config/configs.json
@@ -2,62 +2,77 @@
     "tables": [
       {
         "name": "hourly_datas_radio_prod",
-        "bucket": "trafic",
+        "bucket": "motower",
         "folder": "trafic",
         "table": "trafic"
       },
       {
         "name": "hourly_datas_radio_prod_archive",
-        "bucket": "trafic",
+        "bucket": "motower",
         "folder": "trafic",
         "table": "trafic"
       },
       {
         "name": "ks_tdb_radio_drsi",
-        "bucket": "trafic",
+        "bucket": "motower",
         "folder": "trafic_v2",
         "table": "trafic_v2"
 
       },
       {
+        "name": "ks_hebdo_tdb_radio_drsi",
+        "bucket": "motower",
+        "folder": "wcongestion",
+        "table": "wcongestion"
+      },
+      {
+        "name": "ks_daily_tdb_radio_drsi",
+        "bucket": "motower",
+        "folder": "dtrafic",
+        "table": "dtrafic"
+      },
+      {
         "name": "Taux_succes_2g",
-        "bucket": "success-rate",
-        "folder": "2g",
+        "bucket": "motower",
+        "folder": "successrate_2g",
         "table": "successrate"
       },
       {
         "name": "Taux_succes_3g",
-        "bucket": "success-rate",
-        "folder": "3g",
+        "bucket": "motower",
+        "folder": "successrate_3g",
         "table": "successrate"
       },
       {
         "name": "Call_drop_2g",
-        "bucket": "call-drop",
-        "folder": "2g",
+        "bucket": "motower",
+        "folder": "calldrop_2g",
         "table": "calldrop"
       },
       {
         "name": "Call_drop_3g",
-        "bucket": "call-drop",
-        "folder": "3g",
+        "bucket": "motower",
+        "folder": "calldrop_3g",
         "table": "calldrop"
       },
       {
         "name": "faitalarme",
-        "bucket": "indisponibilite",
+        "bucket": "motower",
         "folder": "indisponibilite",
         "table": "indisponibilite"
       },
       {
         "name": "caparc",
-        "bucket": "ca-parc",
+        "bucket": "motower",
         "folder": "ca-parc",
         "columns": [
           "day_id",
           "id_site",
           "ca_voix",
           "ca_data",
+          "ca_total",
+          "trafic_voix_in",
+          "trafic_data_in",
           "parc",
           "parc_data",
           "parc_2g",
@@ -68,9 +83,16 @@
         ],
         "table": "caparc"
       },
+
+      {
+        "name": "dtm_motower_gsm",
+        "bucket": "motower",
+        "folder": "ca-parc",
+        "table": "caparc"
+      },
       {
         "name": "BASE_SITES",
-        "bucket": "gpsoci",
+        "bucket": "motower",
         "folder": "BASE_SITES",
         "columns": [
           "site",
@@ -97,7 +119,7 @@
       },
       {
         "name": "OPEX_ESCO",
-        "bucket": "gpsoci",
+        "bucket": "motower",
         "folder": "OPEX_ESCO",
         "columns": [
           "code site oci",
@@ -117,7 +139,7 @@
       },
       {
         "name": "ANNEXE_OPEX_ESCO",
-        "bucket": "gpsoci",
+        "bucket": "motower",
         "folder": "ANNEXE_OPEX_ESCO",
         "columns": [
           "code site oci",
@@ -137,7 +159,7 @@
       },
       {
         "name": "OPEX_IHS",
-        "bucket": "gpsoci",
+        "bucket": "motower",
         "folder": "OPEX_IHS",
         "columns": [
           "site id ihs",
@@ -157,7 +179,7 @@
       },
       {
         "name": "CONGESTION",
-        "bucket": "gpsoci",
+        "bucket": "motower",
         "folder": "CONGESTION",
         "columns": [
           "periode",
@@ -176,18 +198,427 @@
         "table": "congestion"
       }
     ],
+    "final_bucket": "motower",
+    "final_folder": "oneforall",
     "data": "/home/yasmine/Documents/DATA354/ds5vpn.orange-cit.ci:44434/apps/python/data",
     "ftp_dir": "EXTRACT_VBM",
     "airflow_receivers": [
       "richmond.kongo@orange.com",
       "assane.diop@orange.com",
-      "cyrille1.danho@orange.com"
+      "cyrille1.danho@orange.com",
+      "mohamed2.sylla@orange.com",
+      "amadou.diomande@orange.com",
+      "Jonas.kouame@orange.com",
+      "armand.kablan@orange.com",
+      "anicet.azombade@orange.com",
+      "etienne.kouadio@orange.com",
+      "bertine.kouakou@orange.com",
+      "florentine.kouakou@orange.com",
+      "ange.phaceli@orange.com",
+      "soulegame.soro@orange.com",
+      "innocent.yengo@orange.com"
     ],
-    "api_mails": "http://10.242.36.139.sslip.io/api/alerting",
-    "api_params": "http://10.242.36.139.sslip.io/api/parametre",
+    "api_mails": "http://10.240.38.38:30400/api/alerting",
+    "api_params": "http://10.240.38.38:30400/api/parametre",
     "date_format": "%Y-%m-%d",
-    "intercos":  0.139,
-    "impot_taxe": 0.116 ,
-    "frais_distribution" :  0.09 ,
-    "seuil_rentabilite" : 0.65
+    "intercos":  13.9,
+    "impot_taxe": 11.6 ,
+    "frais_distribution" : 9 ,
+    "seuil_rentabilite" : 65,
+    "threshold":{
+      "ca_total": { 
+        "min": 425072294.222149,
+        "max": 3398234863.35415
+      },
+      "ca_voix": { 
+        "min": 145257700.98205,
+        "max": 1549278313.29794
+      },
+      "ca_data": { 
+        "min": 154142028.60985,
+        "max": 1972334342.24778
+      },
+      "parc": { 
+        "min": 0,
+        "max": 20000000
+      },
+      "parc_global": { 
+        "min": 0,
+        "max": 17000000
+      },
+      "parc_data": { 
+        "min": 3000000,
+        "max": 12000000
+      },
+      "sites_actifs": {
+        "min": 1950,
+        "max": 3900
+      },
+      "trafic_voix_erl": {
+        "min": 1447035.03867713,
+        "max": 5813359.7595367
+      },
+      "trafic_data_go": {
+        "min": 460000,
+        "max": 2600000
+      }
+      
+      
+    },
+    "default_adress": ["jean-louis.gbadi@orange.com",   
+    "richmond.kongo@orange.com",
+    "assane.diop@orange.com",
+    "cyrille1.danho@orange.com",
+    "mohamed2.sylla@orange.com",
+    "amadou.diomande@orange.com",
+    "Jonas.kouame@orange.com",
+    "armand.kablan@orange.com",
+    "anicet.azombade@orange.com",
+    "etienne.kouadio@orange.com",
+    "bertine.kouakou@orange.com",
+    "florentine.kouakou@orange.com",
+    "ange.phaceli@orange.com",
+    "soulegame.soro@orange.com",
+    "innocent.yengo@orange.com"],    
+    "output_tables": {
+
+     
+     "motower_monthly_faits": {
+        "mois": "VARCHAR",                
+        "code_oci": "VARCHAR",
+        "ca_voix": "FLOAT",
+        "ca_data": "FLOAT",
+        "parc_global": "INTEGER",
+        "parc_data": "INTEGER",
+        "parc_2g": "INTEGER",
+        "parc_3g": "INTEGER",   
+        "parc_4g": "INTEGER", 
+        "parc_5g": "INTEGER", 
+        "autre_parc": "INTEGER", 
+        "o_m": "FLOAT", 
+        "energie": "FLOAT", 
+        "infra": "FLOAT", 
+        "maintenance_passive_preventive": "FLOAT", 
+        "garde_de_securite": "FLOAT", 
+        "discount": "FLOAT", 
+        "volume_discount": "FLOAT", 
+        "tva": "FLOAT", 
+        "opex_itn": "FLOAT",                   
+        "trafic_data_v2_2g": "FLOAT", 
+        "trafic_data_v2_3g": "FLOAT", 
+        "trafic_data_v2_4g": "FLOAT", 
+        "trafic_voix_v2_2g": "FLOAT", 
+        "trafic_voix_v2_3g": "FLOAT", 
+        "trafic_voix_v2_4g": "FLOAT", 
+        "cellules_v2_2g": "INTEGER", 
+        "cellules_congestionne_v2_2g": "INTEGER", 
+        "cellules_v2_3g": "INTEGER", 
+        "cellules_congestionne_v2_3g": "INTEGER", 
+        "cellules_v2_4g": "INTEGER", 
+        "cellules_congestionne_v2_4g": "INTEGER", 
+        "ca_total": "FLOAT", 
+        "cellules_congestionnees_total_v2": "INTEGER", 
+        "cellules_total_v2": "INTEGER", 
+        "taux_congestion_2g_v2": "FLOAT", 
+        "taux_congestion_3g_v2": "FLOAT", 
+        "taux_congestion_4g_v2": "FLOAT", 
+        "taux_congestion_total_v2": "FLOAT", 
+        "arpu": "FLOAT", 
+        "interco": "FLOAT", 
+        "impot": "FLOAT", 
+        "frais_dist": "FLOAT", 
+        "opex": "FLOAT", 
+        "autre_opex": "FLOAT", 
+        "ebitda": "FLOAT", 
+        "marge_ca": "FLOAT", 
+        "days": "INTEGER",  
+        "evolution_segment": "INTEGER",
+        "avg_2g_cssr_cs":"INTEGER",
+        "avg_3g_cssr_cs":"INTEGER",
+        "segment":"VARCHAR",
+        "previous_segment":"VARCHAR"
+    },
+
+       "motower_monthly_dimensions": {
+        "mois": "VARCHAR",                
+        "code_oci": "VARCHAR", 
+        "site":  "VARCHAR",
+        "autre_code": "VARCHAR",
+        "longitude": "VARCHAR",
+        "latitude": "VARCHAR",              
+        "type_du_site": "VARCHAR",
+        "statut": "VARCHAR",
+        "localisation": "VARCHAR",
+        "commune": "VARCHAR",
+        "departement": "VARCHAR",
+        "region": "VARCHAR",
+        "partenaires": "VARCHAR",
+        "proprietaire": "VARCHAR",
+        "gestionnaire": "VARCHAR",
+        "type_geolocalite": "VARCHAR",
+        "projet": "VARCHAR",
+        "clutter": "VARCHAR",
+        "position_site": "VARCHAR", 
+        "pareto": "BOOLEAN", 
+        "recommandation_v2": "VARCHAR", 
+        "segmentation_rentabilite_v2": "VARCHAR", 
+        "rentable": "BOOLEAN", 
+        "niveau_rentabilite": "VARCHAR", 
+        "days": "INTEGER"
+    },
+
+      "motower_monthly": {
+        "mois": "VARCHAR",                
+        "code_oci": "VARCHAR", 
+        "site":  "VARCHAR",
+        "autre_code": "VARCHAR",
+        "longitude": "VARCHAR",
+        "latitude": "VARCHAR",              
+        "type_du_site": "VARCHAR",
+        "statut": "VARCHAR",
+        "localisation": "VARCHAR",
+        "commune": "VARCHAR",
+        "departement": "VARCHAR",
+        "region": "VARCHAR",
+        "partenaires": "VARCHAR",
+        "proprietaire": "VARCHAR",
+        "gestionnaire": "VARCHAR",
+        "type_geolocalite": "VARCHAR",
+        "projet": "VARCHAR",
+        "clutter": "VARCHAR",
+        "position_site": "VARCHAR",
+        "ca_voix": "FLOAT",
+        "ca_data": "FLOAT",
+        "parc_global": "INTEGER",
+        "parc_data": "INTEGER",
+        "parc_2g": "INTEGER",
+        "parc_3g": "INTEGER",   
+        "parc_4g": "INTEGER", 
+        "parc_5g": "INTEGER", 
+        "autre_parc": "INTEGER", 
+        "o_m": "FLOAT", 
+        "energie": "FLOAT", 
+        "infra": "FLOAT", 
+        "maintenance_passive_preventive": "FLOAT", 
+        "garde_de_securite": "FLOAT", 
+        "discount": "FLOAT", 
+        "volume_discount": "FLOAT", 
+        "tva": "FLOAT", 
+        "opex_itn": "FLOAT",                   
+        "trafic_data_v2_2g": "FLOAT", 
+        "trafic_data_v2_3g": "FLOAT", 
+        "trafic_data_v2_4g": "FLOAT", 
+        "trafic_voix_v2_2g": "FLOAT", 
+        "trafic_voix_v2_3g": "FLOAT", 
+        "trafic_voix_v2_4g": "FLOAT", 
+        "cellules_v2_2g": "INTEGER", 
+        "cellules_congestionne_v2_2g": "INTEGER", 
+        "cellules_v2_3g": "INTEGER", 
+        "cellules_congestionne_v2_3g": "INTEGER", 
+        "cellules_v2_4g": "INTEGER", 
+        "cellules_congestionne_v2_4g": "INTEGER", 
+        "ca_total": "FLOAT", 
+        "segment": "VARCHAR", 
+        "pareto": "BOOLEAN", 
+        "cellules_congestionnees_total_v2": "INTEGER", 
+        "cellules_total_v2": "INTEGER", 
+        "taux_congestion_2g_v2": "FLOAT", 
+        "taux_congestion_3g_v2": "FLOAT", 
+        "taux_congestion_4g_v2": "FLOAT", 
+        "taux_congestion_total_v2": "FLOAT", 
+        "recommandation_v2": "VARCHAR", 
+        "arpu": "FLOAT", 
+        "segmentation_rentabilite_v2": "VARCHAR", 
+        "interco": "FLOAT", 
+        "impot": "FLOAT", 
+        "frais_dist": "FLOAT", 
+        "opex": "FLOAT", 
+        "autre_opex": "FLOAT", 
+        "ebitda": "FLOAT", 
+        "marge_ca": "FLOAT", 
+        "rentable": "BOOLEAN", 
+        "niveau_rentabilite": "VARCHAR", 
+        "days": "INTEGER",  
+        "previous_segment": "VARCHAR" ,
+        "evolution_segment": "INTEGER"
+    },
+      "motower_daily_caparc": { 
+                "jour": "date", 
+                "code_oci": "varchar", 
+                "code_oci_id": "FLOAT", 
+                "autre_code": "VARCHAR", 
+                "clutter": "VARCHAR", 
+                "commune": "VARCHAR", 
+                "departement": "VARCHAR", 
+                "type_du_site": "VARCHAR", 
+                "type_geolocalite": "VARCHAR", 
+                "gestionnaire": "VARCHAR", 
+                "latitude": "VARCHAR", 
+                "longitude": "VARCHAR", 
+                "localisation": "VARCHAR", 
+                "partenaires": "VARCHAR", 
+                "proprietaire": "VARCHAR", 
+                "position_site": "VARCHAR", 
+                "site": "VARCHAR", 
+                "statut": "VARCHAR", 
+                "projet": "VARCHAR", 
+                "region": "VARCHAR", 
+                "ca_data": "FLOAT", 
+                "ca_voix": "FLOAT", 
+                "ca_total": "FLOAT", 
+                "parc_global": "INTEGER", 
+                "parc_data": "INTEGER", 
+                "parc_2g": "INTEGER", 
+                "parc_3g": "INTEGER", 
+                "parc_4g": "INTEGER", 
+                "parc_5g": "INTEGER", 
+                "autre_parc": "INTEGER", 
+                "trafic_data_in": "FLOAT", 
+                "trafic_voix_in": "FLOAT", 
+                "trafic_data_in_mo": "FLOAT", 
+                "ca_mtd": "FLOAT", 
+                "ca_norm": "FLOAT", 
+                "segment": "VARCHAR", 
+                "previous_segment": "VARCHAR" ,
+                "evolution_segment": "INTEGER"
+              },
+
+
+      "motower_daily_caparc_faits_new": { 
+                "jour": "date", 
+                "code_oci": "varchar", 
+                "code_oci_id": "FLOAT",
+                "mois": "INTEGER", 
+                "annee": "INTEGER", 
+                "ca_data": "FLOAT", 
+                "ca_voix": "FLOAT", 
+                "ca_total": "FLOAT", 
+                "parc_global": "INTEGER", 
+                "parc_data": "INTEGER", 
+                "parc_2g": "INTEGER", 
+                "parc_3g": "INTEGER", 
+                "parc_4g": "INTEGER", 
+                "parc_5g": "INTEGER", 
+                "autre_parc": "INTEGER", 
+                "trafic_data_in": "FLOAT", 
+                "trafic_voix_in": "FLOAT", 
+                "trafic_data_in_mo": "FLOAT", 
+                "ca_mtd": "FLOAT", 
+                "ca_norm": "FLOAT",
+                "segment": "VARCHAR",
+                "previous_segment": "VARCHAR",
+                "evolution_segment": "INTEGER"
+              },
+
+
+      "motower_daily_caparc_dimension_new": { 
+                "jour": "date", 
+                "mois": "INTEGER",
+                "code_oci": "varchar", 
+                "code_oci_id": "FLOAT", 
+                "autre_code": "VARCHAR", 
+                "clutter": "VARCHAR", 
+                "commune": "VARCHAR", 
+                "departement": "VARCHAR", 
+                "type_du_site": "VARCHAR", 
+                "type_geolocalite": "VARCHAR", 
+                "gestionnaire": "VARCHAR", 
+                "latitude": "VARCHAR", 
+                "longitude": "VARCHAR", 
+                "localisation": "VARCHAR", 
+                "partenaires": "VARCHAR", 
+                "proprietaire": "VARCHAR", 
+                "position_site": "VARCHAR", 
+                "site": "VARCHAR", 
+                "statut": "VARCHAR", 
+                "projet": "VARCHAR", 
+                "region": "VARCHAR"
+              },
+      
+
+
+      "motower_daily_caparc_faits_n": { 
+                "jour": "date", 
+                "code_oci": "varchar", 
+                "code_oci_id": "FLOAT",
+                "mois": "INTEGER", 
+                "annee": "INTEGER", 
+                "ca_data": "FLOAT", 
+                "ca_voix": "FLOAT", 
+                "ca_total": "FLOAT", 
+                "parc_global": "INTEGER", 
+                "parc_data": "INTEGER", 
+                "parc_2g": "INTEGER", 
+                "parc_3g": "INTEGER", 
+                "parc_4g": "INTEGER", 
+                "parc_5g": "INTEGER", 
+                "autre_parc": "INTEGER", 
+                "trafic_data_in": "FLOAT", 
+                "trafic_voix_in": "FLOAT", 
+                "trafic_data_in_mo": "FLOAT", 
+                "ca_mtd": "FLOAT", 
+                "ca_norm": "FLOAT",
+                "segment": "VARCHAR",
+                "previous_segment": "VARCHAR",
+                "evolution_segment": "INTEGER"
+              },
+
+
+      "motower_daily_caparc_dimension_n": { 
+                "jour": "date", 
+                "mois": "INTEGER",
+                "code_oci": "varchar", 
+                "code_oci_id": "FLOAT", 
+                "autre_code": "VARCHAR", 
+                "clutter": "VARCHAR", 
+                "commune": "VARCHAR", 
+                "departement": "VARCHAR", 
+                "type_du_site": "VARCHAR", 
+                "type_geolocalite": "VARCHAR", 
+                "gestionnaire": "VARCHAR", 
+                "latitude": "VARCHAR", 
+                "longitude": "VARCHAR", 
+                "localisation": "VARCHAR", 
+                "partenaires": "VARCHAR", 
+                "proprietaire": "VARCHAR", 
+                "position_site": "VARCHAR", 
+                "site": "VARCHAR", 
+                "statut": "VARCHAR", 
+                "projet": "VARCHAR", 
+                "region": "VARCHAR"
+              },
+
+      "motower_daily_congestion": { 
+              "jour": "date", 
+              "mois":"INTEGER",
+              "annee":"INTEGER",
+              "id_site": "FLOAT", 
+              "cellules_2g": "INTEGER", 
+              "cellules_3g": "INTEGER", 
+              "cellules_4g": "INTEGER", 
+              "cellules_2g_congestionnees": "INTEGER", 
+              "cellules_3g_congestionnees": "INTEGER", 
+              "cellules_4g_congestionnees": "INTEGER", 
+              "cellules_totales": "INTEGER", 
+              "cellules_congestionnees_totales": "INTEGER" 
+    },
+      "motower_daily_trafic":{ 
+              "jour": "date", 
+              "mois":"INTEGER",
+              "annee":"INTEGER",
+              "id_site": "FLOAT", 
+              "trafic_data_2g": "FLOAT", 
+              "trafic_data_3g": "FLOAT", 
+              "trafic_data_4g": "FLOAT", 
+              "trafic_voix_2g": "FLOAT", 
+              "trafic_voix_3g": "FLOAT", 
+              "trafic_voix_4g": "FLOAT", 
+              "trafic_voix_total": "FLOAT", 
+              "trafic_data_total": "FLOAT" 
+    }
+    }
+
+
+    
   }
+
